--- a/src/client/app/pages/group/server/server-detail/server-detail.html
+++ b/src/client/app/pages/group/server/server-detail/server-detail.html
@@ -1,5 +1,5 @@
 <section class="content-header">
-  <h1> Service Info <small>{{ container?.Config?.Name }}</small></h1>
+  <h1> Service Info <small>{{ serviceName }} {{ container.Name }}</small></h1>
   <!-- <ol class="breadcrumb">
     <li>
       <a [routerLink]="['/cluster', groupInfo.ID, 'overview']"><i class="fa fa-th"></i> Container List</a>
@@ -96,13 +96,13 @@
                     <div class="box-body">
                       <div>
                         <p>
-                          <a href="javascript: void(0)" (click)="showLogsView(obj.key, item)">
-                            View Logs
+                          <a  [routerLink]="['/group', groupId, this.ip, 'containers', obj.value.Name, {queryParams:{'compose':'true'}}]" href="javascript: void(0)">
+                            More Detail
                           </a>
                         </p>
                         <p>
-                          <a  [routerLink]="['/group', groupId, this.ip, 'containers', obj.value.Name]" href="javascript: void(0)">
-                            More Detail
+                          <a href="javascript: void(0)" (click)="showLogsView(obj.value)">
+                            View Logs
                           </a>
                         </p>
                         <p class="text-info title" style="margin-top: initial">
@@ -168,6 +168,35 @@
 </section>
 
 <!-- Modal Define Begin -->
+<hb-modal [options]="logsViewModalOptions">
+  <div class="flex-display" style="margin-bottom: 10px;">
+    <div class="tail-select-panel">
+      <div class="input-group">
+        <span class="input-group-addon">Tail</span>
+        <select class="form-control" [ngModel]="logsViewModalOptions.tailNum" (ngModelChange)="tailNumChanged($event)">
+          <option value="50">50</option>
+          <option value="100">100</option>
+          <option value="200">200</option>
+          <option value="500">500</option>
+          <option value="1000">1000</option>
+          <option value="2000">2000</option>
+        </select>
+      </div>
+    </div>
+    <div>
+      <button type="button" class="btn btn-default btn-flat" (click)="getLogs()">
+        <i class="fa fa-refresh"></i>
+      </button>
+    </div>
+  </div>
+  <div class="logs-panel" #logPanel [attr.data-has-log]="logs?.length || null">
+    <p *ngFor="let item of logs">{{ item }}</p>
+  </div>
+  <div class="alert alert-info" *ngIf="!logs?.length">
+    <i class="fa-fw fa fa-info"></i>
+    <span>This container does not contain any logs.</span>
+  </div>
+</hb-modal>
 <!-- <hb-modal [options]="deleteContainerModalOptions">
   <p>Are you sure you want to delete <strong class="text-danger">{{ container?.Config?.Name }}</strong>?</p>
   <hb-modal-footer>
