--- a/src/client/app/pages/group/server/component-new/component-new.html
+++ b/src/client/app/pages/group/server/component-new/component-new.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="form-group">
-      <a class="btn bg-olive btn-flat" (click)="checkComposeData()">校验</a>
+      <a class="btn bg-olive btn-flat" (click)="checkComposeData()">Check</a>
       <button type="submit" class="btn bg-olive btn-flat">Save</button>
     </div>
   </form>
