--- a/src/client/app/pages/group/server/component-new/component-new.html
+++ b/src/client/app/pages/group/server/component-new/component-new.html
@@ -1,10 +1,10 @@
 <section class="content-header">
-  <h1> New Compose</h1>
+  <h1> New Service</h1>
   <ol class="breadcrumb">
     <li>
       <a [routerLink]="['/group', groupId, ip, 'overview']"><i class="fa fa-th"></i> Container List</a>
     </li>
-    <li class="active">New Compose</li>
+    <li class="active">New Service</li>
   </ol>
 </section>
 <section class="content">
