--- a/src/client/app/pages/group/server/server-detail/server-detail.html
+++ b/src/client/app/pages/group/server/server-detail/server-detail.html
@@ -15,28 +15,31 @@
         <span class="fa fa-caret-down"></span>
       </button>
       <ul class="dropdown-menu">
-        <li>
-          <a href="javascript:void(0)" (click)="operate('start', $event)">Start</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)" (click)="operate('stop', $event)">Stop</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)" (click)="operate('restart', $event)">Restart</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)" (click)="operate('restart', $event)">Up</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)" (click)="operate('restart', $event)">Down</a>
-        </li>
-        <li class="divider"></li>
-        <li>
-          <a href="javascript:void(0)" (click)="showDeleteModal($event)">
-            <i class="fa fa-warning text-danger"></i> Delete
-          </a>
-        </li>
-      </ul>
+          <li>
+            <a href="javascript:void(0)" (click)="operate('unpause', $event)">Unpause</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)" (click)="operate('pause', $event)">Pause</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)" (click)="operate('restart', $event)">Restart</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)" (click)="operate('stop', $event)">Stop</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)" (click)="operate('start', $event)">Start</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)" (click)="operate('kill', $event)">kill</a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a href="javascript:void(0)" [class.disable]="container.State?.Running" (click)="showDeleteModal($event)">
+              <i class="fa fa-warning text-danger"></i> Down
+            </a>
+          </li>
+        </ul>
     </div>
     <!-- <a [routerLink]="['/cluster', groupInfo.ID, 'containers', metaId, 'clone']" class="btn btn-default btn-flat">
       <i class="fa fa-copy"></i> Clone
@@ -92,11 +95,11 @@
                       </a>
                     </h4>
                   </div>
-                  <div [attr.id]="'ins_'+obji+'_'+i" class="panel-collapse" [ngClass]="{'in': isFirst}" aria-expanded="false">
+                  <div [attr.id]="'ins_'+obji+'_'+i" class="panel-collapse collapse in" aria-expanded="false">
                     <div class="box-body">
                       <div>
                         <p>
-                          <a  [routerLink]="['/group', groupId, this.ip, 'containers', obj.value.Name, {queryParams:{'compose':'true'}}]" href="javascript: void(0)">
+                          <a  [routerLink]="['/group', groupId, this.ip, 'containers', obj.value.Name, {compose:'true'}]" href="javascript: void(0)">
                             More Detail
                           </a>
                         </p>
@@ -197,20 +200,19 @@
     <span>This container does not contain any logs.</span>
   </div>
 </hb-modal>
-<!-- <hb-modal [options]="deleteContainerModalOptions">
-  <p>Are you sure you want to delete <strong class="text-danger">{{ container?.Config?.Name }}</strong>?</p>
+<hb-modal [options]="deleteContainerModalOptions">
+  <p>Are you sure you want to delete {{ container?.Name?.substr(1) }}?</p>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" (change)="enableForceDeletion($event)">
+      <span class="text-danger">
+          You want to force delete
+      </span>
+    </label>
+  </div>
   <hb-modal-footer>
     <button type="button" class="btn btn-default btn-flat" (click)="deleteContainerModalOptions.show = fasle">Cancel</button>
     <button type="button" class="btn btn-success btn-flat" (click)="deleteContainer()">Confirm</button>
   </hb-modal-footer>
 </hb-modal>
-
-<hb-modal [options]="reAssignConfirmModalOptions">
-  <p>Are you sure you want to reassign <strong class="text-danger">{{ container?.Config?.Name }}</strong>?</p>
-  <p>This may cause service interruption for a few seconds!</p>
-  <hb-modal-footer>
-    <button type="button" class="btn btn-default btn-flat" (click)="reAssignConfirmModalOptions.show = fasle">Cancel</button>
-    <button type="button" class="btn btn-success btn-flat" (click)="reAssign()">Confirm</button>
-  </hb-modal-footer>
-</hb-modal> -->
 <!-- Modal Define End -->
