--- a/src/client/app/pages/group/server/server-detail/server-detail.html
+++ b/src/client/app/pages/group/server/server-detail/server-detail.html
@@ -16,22 +16,22 @@
       </button>
       <ul class="dropdown-menu">
           <li>
-            <a href="javascript:void(0)" (click)="operate('unpause', $event)">Unpause</a>
+            <a href="javascript:void(0)" (click)="operate('unpause')">Unpause</a>
           </li>
           <li>
-            <a href="javascript:void(0)" (click)="operate('pause', $event)">Pause</a>
+            <a href="javascript:void(0)" (click)="operate('pause')">Pause</a>
           </li>
           <li>
-            <a href="javascript:void(0)" (click)="operate('restart', $event)">Restart</a>
+            <a href="javascript:void(0)" (click)="operate('restart')">Restart</a>
           </li>
           <li>
-            <a href="javascript:void(0)" (click)="operate('stop', $event)">Stop</a>
+            <a href="javascript:void(0)" (click)="operate('stop')">Stop</a>
           </li>
           <li>
-            <a href="javascript:void(0)" (click)="operate('start', $event)">Start</a>
+            <a href="javascript:void(0)" (click)="operate('start')">Start</a>
           </li>
           <li>
-            <a href="javascript:void(0)" (click)="operate('kill', $event)">kill</a>
+            <a href="javascript:void(0)" (click)="operate('kill')">kill</a>
           </li>
           <li class="divider"></li>
           <li>
