--- a/src/client/app/pages/group/server/component-new/component-new.html
+++ b/src/client/app/pages/group/server/component-new/component-new.html
@@ -2,7 +2,7 @@
   <h1> New Service</h1>
   <ol class="breadcrumb">
     <li>
-      <a [routerLink]="['/group', groupId, ip, 'overview']"><i class="fa fa-th"></i> Container List</a>
+      <a [routerLink]="['/group', groupId, ip, 'overview']"><i class="fa fa-th"></i> Service List</a>
     </li>
     <li class="active">New Service</li>
   </ol>
@@ -39,14 +39,20 @@
     </div>
 
     <div class="form-group">
-      <label>Compose Data</label>
-      <div class="form-control" style="margin-bottom: 10px;">
-        <input type="file" accept=".yml" (change)="selectedFileOnChanged($event)" style="outline: none;width: 100%;cursor: pointer;">
+      <label>Compose Yaml <a style="color: #155bb3" target="_black" href="https://docs.docker.com/compose/faq/">(FAQ)</a></label>
+      <div class="alert alert-warning show" style="margin: 10px 0;">
+        The current docker version is <strong> {{ dockerEngineVersion }} </strong>,
+        &nbsp;
+        Humpback compose yaml currently supports
+        <a style="color: #155bb3" target="_black" href="https://docs.docker.com/compose/compose-file/compose-file-v1/">v1</a>
+        and
+        <a style="color: #155bb3" target="_black" href="https://docs.docker.com/compose/compose-file/compose-file-v2/">v2</a>
+        version
       </div>
       <div [class.has-error]="submitted && !form.value.Data">
         <div class="flex-display">
           <div class="btn-group btn-group-sm">
-            <label class="btn btn-sm btn-default" [class.active]="configInfo._sandMode == 'yaml'">Yaml</label>
+            <label style="display:inline-block; vertical-align: middle; padding: 5px 5px 5px 10px;margin-bottom: 0; font-weight: normal">Yaml</label>
           </div>
           <button type="button" class="btn btn-sm btn-default m-l-xs" (click)="showFullScreen('prd', prdEditor)">
             <i class="fa fa-arrows-alt"></i>
@@ -64,11 +70,26 @@
           <span class="help-block">Compose data is required.</span>
         </div>
       </div>
-      <div class="alert alert-danger show" style="margin: 10px 0;" *ngIf="composeDataError">
+      <div class="form-group">
+        <div class="checkbox">
+          <label style="font-weight: 700;">
+            <input type="checkbox" formControlName="EnableUploadYaml">
+            Upload Yaml
+          </label>
+        </div>
+        <div class="form-control" style="margin-bottom: 10px;" *ngIf="form.controls.EnableUploadYaml.value">
+          <input type="file" accept=".yml, .yaml" (change)="selectedFileOnChanged($event)" style="outline: none;width: 100%;cursor: pointer;">
+        </div>
+      </div>
+      <div class="alert alert-danger show" style="margin: 10px 0;" *ngIf="composeDataError && composeDataError!=='succeed'">
         {{ composeDataError }}
+      </div>
+      <div class="alert alert-success show" style="margin: 10px 0;" *ngIf="composeDataError=='succeed' && !isSaveCheck">
+        Succeed
       </div>
     </div>
     <div class="form-group">
+      <a class="btn bg-olive btn-flat" (click)="showExample()">Show Example</a>
       <a class="btn bg-olive btn-flat" (click)="checkComposeData()">Check</a>
       <button type="submit" class="btn bg-olive btn-flat">Save</button>
     </div>
