--- a/src/client/app/pages/cluster/container-info/container-info.html
+++ b/src/client/app/pages/cluster/container-info/container-info.html
@@ -32,9 +32,9 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="btn btn-default btn-flat" (click)="showAdvanceSettingModal()" style="width: initial;">
-      <i class="fa fa-pencil"></i> Advance Setting
-    </button>
+    <a [routerLink]="['/cluster', groupInfo.ID, 'containers', metaId, 'edit']" class="btn btn-default btn-flat">
+      <i class="fa fa-pencil"></i> Edit
+    </a>
     <a [routerLink]="['/cluster', groupInfo.ID, 'containers', metaId, 'clone']" class="btn btn-default btn-flat">
       <i class="fa fa-copy"></i> Clone
     </a>
@@ -139,6 +139,16 @@
                 <span *ngIf="item.SecretToken">with token
                     <span class="text-danger">{{ item.SecretToken }}</span>
                 </span>
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div *ngIf="container.Placement?.Constraints && container.Placement?.Constraints?.length > 0">
+            <p class="text-info title"><strong>Placement Constraints</strong></p>
+            <ul class="list-unstyled">
+              <li value="-" class="flex-display flex-align-center custom-list" *ngFor="let item of container.Placement.Constraints">
+                <span class="no-margin">
+                  {{ item }}
                 </span>
               </li>
             </ul>
