improve humpback-agent url

--- a/src/client/app/pages/group/server/container-new/container-new.html
+++ b/src/client/app/pages/group/server/container-new/container-new.html
@@ -391,6 +391,6 @@
 
 <div *ngIf="agentInvalid" style="padding: 15px;">
   <div class="alert alert-danger show">
-      Please update humpback-agent to the <a href="http://humpback.newegg.org/hub/_/bts%2Fhumpback-agent/overview;activedTab=tags">latest version</a>
+      Please update humpback-agent to the <a href="https://hub.docker.com/r/humpbacks/humpback-agent/">latest version</a>
   </div>
 </div>
