--- a/src/client/app/pages/cluster/container-edit/container-edit.html
+++ b/src/client/app/pages/cluster/container-edit/container-edit.html
@@ -375,6 +375,15 @@
     <div class="sub-panel">
       <p class="text-info title"><strong>Advanced</strong></p>
       <hr>
+      <div class="form-group">
+        <div class="checkbox alert alert-info">
+          <label>
+            <input type="checkbox" name="delay" formControlName="IsRemoveDelay">Remove delay
+          </label>
+          <span class="text-danger">&nbsp;&nbsp;(Delay (8 minutes) remove unused containers for service debounce.)</span>
+        </div>
+      </div>
+
       <div class="form-group" [class.has-error]="submitted && form.controls.Instances.invalid">
         <label>Number of Instances (Server Num {{groupInfo.Servers.length}})</label>
         <input type="number" #instancesNum class="form-control" formControlName="Instances" required min="1" validateInteger validateRange>
